--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,22 @@
 body{
-    background-color:black;
+    background-color:white;
+}
+
+header{
+    color:black;
+    border:1px red solid;
+    text-align:center;
+
+}
+
+#button{
+    text-align:center;
 }
 
 #instructions {
     background-color:black;
     font:italic;
-    color:gold;
+    color:black;
     text-align:center;
     position:relative;
     margin-top: 120px;
@@ -20,16 +31,78 @@ body{
 
 #game_text{
     text-align:center;
-    color:gold;
+    color:black;
     margin-top:100px;
     height:620px;
     float:right;
-    border:1px red solid;
+    border:red solid 
 
 }
 
+#L1{
+    border: green solid;
+    height:150px;
+    width:305px;
+    margin-left:5px;
+    margin-right:145px;
+    margin-top:20px;
+    margin-bottom:-7px;
+    font-size: 40px;
+
+}
+
+#L2{
+    border:1px red solid;
+    height:150px;
+    width:200px;
+    margin-left:340px;
+    margin-right:169px;
+    margin-top:-143px;
+    margin-bottom:0px;
+}
+
+#Letter_Space_3{
+    border:1px red solid;
+    height:25px;
+    width:25px;
+    margin-left:35px;
+    margin-right:35px;
+    margin-top:35px;
+    margin-bottom:35px;
+}
+
+#Letter_Space_4{
+    border:1px red solid;
+    height:25px;
+    width:25px;
+    margin-left:40px;
+    margin-right:40px;
+    margin-top:40px;
+    margin-bottom:40px;
+}
+
+#Letter_Space_5{
+    border:1px red solid;
+    height:25px;
+    width:25px;
+    margin-left:45px;
+    margin-right:45px;
+    margin-top:45px;
+    margin-bottom:45px;
+}
+
+#Letter_Space_6{
+    border:1px red solid;
+    height:25px;
+    width:25px;
+    margin-left:50px;
+    margin-right:50px;
+    margin-top:50px;
+    margin-bottom:50px;
+}
+
 #Guess_Word{
-    color:gold;
+    color:black;
     border:1px red solid;
     margin-top: 120px;
     text-decoration:underline;
@@ -37,15 +110,16 @@ body{
 }
 
 #Chances_Remaining{
-    color:gold;
+    color:black;
     border:1px red solid;
     height:100px;
 }
 
-#Letters_Guessed{
-    color:gold;
+#Letters_Wrong{
+    color:black;
     border:1px red solid;
     height:180px;
+    font-size:40px;
 }
 
 #N64_Console{
